# agents_shorts

./: README.md  main.py  mcp_tools.py  pyproject.toml
promts/: promts.yaml
utils/: __init__.py  call_llm.py  prompts.py
